syntax = "proto3";

option go_package = "github.com/stateprism/prisma_ca/adminprotocol";

message Empty {}

message StopServerRequest {
	string reason = 1;
	bytes token = 2;
}

message AdminAuthRequest {
	bytes challenge_response = 1;
	bytes challenge_id = 2;
	bytes challenge_nonce = 3;
}

message AdminAuthInitResponse {
	bytes challenge = 1;
	bytes challenge_id = 2;
	uint64 challenge_validity = 3;
	uint64 challenge_nonce = 4;
}

message AdminAuthResponse {
	// The username of the admin as will be logged in the server
	string username = 1;
	// The token to be used for further requests
	bytes token = 2;
	// The validity of the token in seconds
	uint64 token_validity = 3;
}

message ChangeRootCertRequest {
	string cert_type = 1;
	string cert_coment = 2;
	uint64 cert_validity = 3;
	bytes token = 4;
}

// Client should check the response to see if the certificate was changed
// success should be true and the returned values should be the same as the requested ones
message ChangeRootCertResponse {
	bool success = 1;
	optional string cert_type = 2;
	optional string cert_coment = 3;
	optional uint64 cert_validity = 4;
}

service AdminService {
	rpc AdminAuthInit (Empty) returns (AdminAuthInitResponse);
	rpc AdminAuthRespond (AdminAuthRequest) returns (AdminAuthResponse);
	rpc StopServer (StopServerRequest) returns (Empty);
	rpc ChangeRootCert (ChangeRootCertRequest) returns (ChangeRootCertResponse);
}
