syntax = "proto3";
import "common/common.proto";

option go_package = "github.com/stateprism/shell_vault/rpc/adminproto";

message StopServerRequest {
  string reason = 1;
  bytes token = 2;
}

message ChangeRootCertRequest {
  string cert_type = 1;
  string cert_coment = 2;
  uint64 cert_validity = 3;
  bytes token = 4;
}

// Client should check the response to see if the certificate was changed
// success should be true and the returned values should be the same as the requested ones
message ChangeRootCertResponse {
  bool success = 1;
  optional string cert_type = 2;
  optional string cert_comment = 3;
  optional uint64 cert_validity = 4;
}

message AddUserRequest {
  string username = 1;
  string realm = 2;
}

message UserActionResponse {
  bool success = 1;
}

service AdminService {
  rpc Authenticate(Empty) returns (AuthReply) {}
  rpc ChangeRootCert (ChangeRootCertRequest) returns (ChangeRootCertResponse);
  rpc AddUser (AddUserRequest) returns (UserActionResponse);
  rpc RestartServer (StopServerRequest) returns (Empty);
}
